--- a/emails/templates/registration-confirmation.html
+++ b/emails/templates/registration-confirmation.html
@@ -30,6 +30,17 @@
   <a href="mailto:info@boldnessandburdens.com" style="color: #d4873a;">info@boldnessandburdens.com</a>.
 </p>
 
+<div class="detail-box">
+  <h3>Support the Conference</h3>
+  <p>The conference is completely free, but if you feel led to give, here are some ways to support:</p>
+  <p><span class="highlight">PayPal:</span> <a href="https://www.paypal.me/HeyMakhel" style="color: #d4873a;">paypal.me/HeyMakhel</a></p>
+  <p><span class="highlight">Bank Transfer:</span></p>
+  <p style="margin: 0 0 4px;">Helen Ajeamo</p>
+  <p style="margin: 0 0 4px;">IBAN: DE22 1001 0178 3877 6363 76</p>
+  <p style="margin: 0 0 4px;">BIC: REVODEB2</p>
+  <p style="margin: 0;">Correspondent BIC: CHASDEFX</p>
+</div>
+
 <p>We look forward to seeing you there!</p>
 
 <a href="https://boldnessandburdens.com" class="btn">Visit Website</a>
