Add donation section and fix beneficiary name to Helen Chijioke
Support section with PayPal and bank transfer options added to homepage and confirmation email.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -290,7 +290,7 @@ const eventJsonLd = {
             <div class="bank-details">
               <div class="bank-row">
                 <span class="bank-label">Beneficiary</span>
-                <span class="bank-value">Helen Ajeamo</span>
+                <span class="bank-value">Helen Chijioke</span>
               </div>
               <div class="bank-row">
                 <span class="bank-label">IBAN</span>
