--- a/emails/templates/registration-confirmation.html
+++ b/emails/templates/registration-confirmation.html
@@ -35,7 +35,7 @@
   <p>The conference is completely free, but if you feel led to give, here are some ways to support:</p>
   <p><span class="highlight">PayPal:</span> <a href="https://www.paypal.me/HeyMakhel" style="color: #d4873a;">paypal.me/HeyMakhel</a></p>
   <p><span class="highlight">Bank Transfer:</span></p>
-  <p style="margin: 0 0 4px;">Helen Ajeamo</p>
+  <p style="margin: 0 0 4px;">Helen Chijioke</p>
   <p style="margin: 0 0 4px;">IBAN: DE22 1001 0178 3877 6363 76</p>
   <p style="margin: 0 0 4px;">BIC: REVODEB2</p>
   <p style="margin: 0;">Correspondent BIC: CHASDEFX</p>
